# typespec-libraries

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  openlet.md  package.json  pnpm-lock.yaml  release-manifest.json  report.md  sonar-project.properties  tsconfig.json  tspconfig.yaml
outputs/game-platform/sqlmodel/: pyproject.toml
outputs/game-platform/sqlmodel/game_platform/: __init__.py  _scalars.py
outputs/game-platform/sqlmodel/game_platform/accounts/: __init__.py  badge.py  subscription.py  user.py
outputs/game-platform/sqlmodel/game_platform/audit/: __init__.py  audit_log.py
outputs/game-platform/sqlmodel/game_platform/collaboration/: __init__.py
outputs/game-platform/sqlmodel/game_platform/collaboration/invites/: __init__.py  invitation.py
outputs/game-platform/sqlmodel/game_platform/content/: __init__.py
outputs/game-platform/sqlmodel/game_platform/content/characters/: __init__.py  npc.py
outputs/game-platform/sqlmodel/game_platform/content/events/: __init__.py  game_event.py
outputs/game-platform/sqlmodel/game_platform/content/places/: __init__.py  location.py
outputs/game-platform/sqlmodel/game_platform/content/stories/: __init__.py  story_node.py
outputs/game-platform/sqlmodel/game_platform/content/taxonomy/: __init__.py  (+1 more)
outputs/game-platform/sqlmodel/game_platform/forms/: __init__.py
outputs/game-platform/sqlmodel/game_platform/shared/: __init__.py  timestamped.py  world_owned.py
outputs/game-platform/sqlmodel/game_platform/worlds/: __init__.py  world.py
(+911 files in other folders)
