[project]
name = "game-platform-example"
version = "0.0.0"
description = "Generated SQLModel classes"
requires-python = ">=3.10"
dependencies = [
    "atlas-provider-sqlalchemy>=0.3.0",
    "sqlmodel>=0.0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game_platform"]
